<resources>
    <string name="app_name">OrderTemplate</string>
    <string name="title_activity_orders">Orders</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Shopping Cart</string>
    <string name="menu_powder">Powder</string>
    <string name="menu_topping">Topping</string>
    <string name="menu_equipment">Equipment</string>
    <string name="menu_tea">Tea</string>
</resources>